--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.5
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +23,4 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/trophy.png
+    - assets/images/teste.jpg
