Feito a tela de criação de torneios.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
+  image_picker: ^1.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
