--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.4.0
   image_picker: ^1.0.0
   intl: ^0.18.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +28,4 @@ flutter:
     - assets/images/logo.png
     - assets/images/trophy.png
     - assets/images/teste.jpg
+    - assets/images/trofeu.png
