--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,3 +29,4 @@ flutter:
     - assets/images/trophy.png
     - assets/images/teste.jpg
     - assets/images/trofeu.png
+    - assets/images/distintivo.png
