--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  collection: ^1.17.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
@@ -28,5 +29,13 @@ flutter:
     - assets/images/logo.png
     - assets/images/trophy.png
     - assets/images/teste.jpg
-    - assets/images/trofeu.png
     - assets/images/distintivo.png
+    
+    #Conquistas
+    - assets/images/conquistas/entusiasta.png
+    - assets/images/conquistas/semrumo.png
+    - assets/images/conquistas/trevo.png
+
+    #Troféus
+    - assets/images/trofeus/trofeu.png
+    - assets/images/trofeus/peixaria.png
