--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_storage: ^11.2.5
   flutter:
     sdk: flutter
+  flutter_swiper_plus: ^2.0.4
   fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.4.0
   google_sign_in: ^6.1.4
@@ -47,3 +48,8 @@ flutter:
     #Troféus
     - assets/images/trofeus/trofeu.png
     - assets/images/trofeus/peixaria.png
+
+    #onboarding
+    - assets/images/sucesso.png
+    - assets/images/equipe.png
+    - assets/images/torneio.png
