--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^1.0.0
   intl: ^0.18.1
   provider: ^6.0.5
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
