--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.4.0
   google_sign_in: ^6.1.4
+  http: ^0.13.6
   image_picker: ^1.0.0
   intl: ^0.18.1
   provider: ^6.0.5
